--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js"></script>
+    <script src="./js.js"></script>
 
   </body>
 </html>
